--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -37,12 +37,7 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="AboutTheme" parent="@android:style/Theme.Light">
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFrame">@null</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowBackground">@drawable/panel_background</item>
+    <style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Settings">
     </style>
 
 </resources>
