--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -37,7 +37,7 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="AboutTheme" parent="@android:style/Theme.Light">
+    <style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Settings">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
